@@ -1,7 +1,7 @@
 MCABBER(1)
 ===========
 Mikael BERTHE <mcabber@lilotux.net>
-v1.0.2, February 2016
+v1.0.3-dev, February 2016
 
 NAME
 ----
